Bug 306138 - Tooltips popup even if the mouse is not hovering the contact anymore
Summary: Tooltips popup even if the mouse is not hovering the contact anymore
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-01 15:39 UTC by FabiB
Modified: 2012-09-11 17:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments
Fix (926 bytes, patch)
2012-09-01 16:54 UTC, Martin Klapetek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2012-09-01 15:39:12 UTC
this time with a real bug. it happens only on telepathy other applications do not open the tooltip if we leave the item or close it short time after unhover.
in the ktp contactlist the tooltip will popup even if we just move the mouse short time over a contact. (because is can not descrip that behavior righthere is a video)
https://www.youtube.com/watch?v=C3O-B0Nkpxk

as you can see it happens most times and the tooltip will not go away. thats really bad because if you are at work and just move the mouse in this firection a really big tooltip will cover a important part of other windows ant even if you move the ktp list in the background the tooltip is still on the top and needs some time to go away.

Reproducible: Sometimes

Steps to Reproduce:
1.open ktp-contactlist
2. move the muose over the list
3. sometimes you will open the tooltips even if your mouse is not hovering a contact
Actual Results:  
tooltip opens not only via hover

Expected Results:  
should only open by mouse hover and should close right after you leave the contact

kde sc 4.9
ktp 0.5
oxygen style
Comment 1 David Edmundson 2012-09-01 15:43:19 UTC
I think we've all seen this, marking as NEW.
Comment 2 Martin Klapetek 2012-09-01 16:54:44 UTC
Created attachment 73592 [details]
Fix

That should definitely not happen; looks like something in the tooltip is eating the viewportLeave events, because even the contact highlight in the list stays on (and as a consequence the tooltip stays on).

Is it possible for you to test this patch on master branch?

Thanks.
Comment 3 FabiB 2012-09-01 18:37:21 UTC
tried against 0.5.0
tooltips works now as they should. thanks!
Comment 4 Martin Klapetek 2012-09-11 17:10:58 UTC
Git commit 049d9db3215115169eb8cd23a70cb9bba5b66116 by Martin Klapetek.
Committed on 11/09/2012 at 19:07.
Pushed by mklapetek into branch 'kde-telepathy-0.5'.

Remove hide timer from tooltips
FIXED-IN: 0.5.1
Reviewed-by: David Edmundson

M  +2    -8    tooltips/tooltipmanager.cpp

http://commits.kde.org/telepathy-contact-list/049d9db3215115169eb8cd23a70cb9bba5b66116
Comment 5 Martin Klapetek 2012-09-11 17:11:45 UTC
Git commit 5dc39fcaf24fe01f65c3cf94e6187db2a6197551 by Martin Klapetek.
Committed on 11/09/2012 at 19:07.
Pushed by mklapetek into branch 'master'.

Remove hide timer from tooltips
FIXED-IN: 0.5.1
Reviewed-by: David Edmundson

M  +2    -8    tooltips/tooltipmanager.cpp

http://commits.kde.org/telepathy-contact-list/5dc39fcaf24fe01f65c3cf94e6187db2a6197551