Remove hide timer from tooltips

BUG: 306138
FIXED-IN: 0.5.1
Reviewed-by: David Edmundson